proconio/tests/ui/fastout/requires-at-least-a-format-string-argument.stderr
error: requires at least a format string argument
 --> $DIR/requires-at-least-a-format-string-argument.rs:5:5
  |
5 |     print!();
  |     ^^^^^^^^^ in this macro invocation
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
